# stellarium

./: .appveyor.yml  BUG_FIX_ATTEMPTS.md  CMakeLists.txt  DYNAMIC_PLUGIN_GUI_RECOMMENDATIONS.md  MOSAICOCULARS_TROUBLESHOOTING.md  MOSAIC_PLANNING_ANALYSIS.md  MOSAIC_PLANNING_REQUIREMENTS.md  run_stellarium_debug.sh
.github/workflows/: ci.yml
plugins/MosaicOculars/: CMakeLists.txt  README.md  build_plugin.sh
plugins/MosaicOculars/resources/: MosaicOculars.qrc
plugins/MosaicOculars/src/: CMakeLists.txt  MosaicOculars.cpp  MosaicOculars.hpp
plugins/MosaicOculars/src/gui/: MosaicOcularsDialog.cpp  MosaicOcularsDialog.hpp  MosaicOcularsGuiPanel.cpp  MosaicOcularsGuiPanel.hpp  mosaicOcularsDialog.ui
plugins/MosaicPlanner/: CMakeLists.txt  COMPLETE_SETUP_GUIDE.md  DEV_BUILD_INSTRUCTIONS.md  INSTALLATION_COMPLETE.md  QT6_BUILD.md  QT_INSTALLER_STEPS.md  QT_VERSION_MATCH.md  QUICK_START.md  README.md  README_QT_VERSION.md  SETUP_SUMMARY.md  USAGE_GUIDE.md  check_qt_version.sh  install_plugin.sh
plugins/MosaicPlanner/src/: CMakeLists.txt  MosaicPlanner.cpp  MosaicPlanner.hpp
plugins/Oculars/: CODE_STYLE_AUDIT.md  TEST_RESULTS.md
plugins/Oculars/src/: CMakeLists.txt  Oculars.cpp  Oculars.hpp
plugins/Oculars/src/gui/: OcularDialog.cpp  OcularsGuiPanel.cpp  OcularsGuiPanel.hpp
plugins/Oculars/src/test/: CMakeLists.txt  TEST_ISSUES.md
src/core/: StelApp.cpp  StelObject.cpp
src/core/modules/: NebulaMgr.cpp
stars/hip_gaia3/: defaultStarsConfig.json
